--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ api-version: 1.21
 folia-supported: true
 depend:
   - zMenu
+libraries:
+  - net.kyori:adventure-api:4.18.0
+  - net.kyori:adventure-text-minimessage:4.18.0
+  - net.kyori:adventure-platform-bukkit:4.3.4
