--- a/src/main/resources/effects/example_farming_hoe.yml
+++ b/src/main/resources/effects/example_farming_hoe.yml
@@ -3,28 +3,28 @@
 id: "super_farming_hoe"
 type: "FARMING_HOE"
 size: 5                # Area size (must be odd number, default: 3)
-autoReplant: true      # Auto-replant crops after harvest (optional, default: true)
-dropLocation: "PLAYER" # Drop location: BLOCK, CENTER, PLAYER (optional)
-dropInInventory: true  # Add drops directly to inventory (optional, default: false)
+auto-replant: true      # Auto-replant crops after harvest (optional, default: true)
+drop-location: "PLAYER" # Drop location: BLOCK, CENTER, PLAYER (optional)
+drop-in-inventory: true  # Add drops directly to inventory (optional, default: false)
 harvest: true          # Enable area tilling (optional, default: true)
-plantSeeds: true       # Enable area seeding (optional, default: true)
-harvestDamage: 1       # Durability damage on harvest (optional, default: 1)
-tillDamage: 1          # Durability damage on tilling (optional, default: 1)
+plant-seeds: true       # Enable area seeding (optional, default: true)
+harvest-damage: 1       # Durability damage on harvest (optional, default: 1)
+till-damage: 1          # Durability damage on tilling (optional, default: 1)
 
 # Optional: List of allowed crops to harvest
-# allowedCrops:
+# allowed-crops:
 #   - WHEAT
 #   - CARROTS
 #   - POTATOES
 #   - BEETROOTS
 
 # Optional: List of allowed seeds to plant
-# allowedSeeds:
+# allowed-seeds:
 #   - WHEAT_SEEDS
 #   - CARROT
 #   - POTATO
 #   - BEETROOT_SEEDS
 
 # Optional: Blacklist items from drops
-# dropBlacklist:
+# drop-blacklist:
 #   - POISONOUS_POTATO
