feat: improve absorption and add command

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -9,3 +9,5 @@ no-permission: "<red>You do not have permission to execute this command."
 only-in-game: "<red>This command can only be executed in-game."
 requirement-not-met: "<red>You do not meet the requirements to perform this command."
 arg-not-recognized: "<red>Argument not recognized."
+
+effect-applied: "<green>Effect %effect% has been applied to your item."
