fix: block data application

--- a/src/main/resources/items/example_advanced_crafter.yml
+++ b/src/main/resources/items/example_advanced_crafter.yml
@@ -17,8 +17,9 @@ lore:
 custom-model-data: 3010
 metadata:
   block-data:
-    crafter:
-      triggered: true  # Pre-triggered state
-      crafting: true   # Currently crafting
-    directional:
-      facing: UP       # Faces upward for hopper integration
+    settings:
+      crafter:
+        triggered: true  # Pre-triggered state
+        crafting: true   # Currently crafting
+      directional:
+        facing: UP       # Faces upward for hopper integration
