--- a/src/main/resources/items/example_berry_vines.yml
+++ b/src/main/resources/items/example_berry_vines.yml
@@ -17,5 +17,6 @@ lore:
 custom-model-data: 3008
 metadata:
   block-data:
-    cave-vines-plant:
-      berries: true  # Has berries ready to harvest
+    settings:
+      cave-vines-plant:
+        berries: true  # Has berries ready to harvest
