--- a/src/main/resources/items/example_birthday_cake.yml
+++ b/src/main/resources/items/example_birthday_cake.yml
@@ -13,5 +13,6 @@ lore:
 custom-model-data: 3001
 metadata:
   block-data:
-    cake:
-      bites: 3  # Déjà mangé 3 fois sur 6
+    settings:
+      cake:
+        bites: 3  # Déjà mangé 3 fois sur 6
