--- a/src/main/resources/items/example_charged_anchor.yml
+++ b/src/main/resources/items/example_charged_anchor.yml
@@ -15,5 +15,6 @@ lore:
 custom-model-data: 3002
 metadata:
   block-data:
-    respawn-anchor:
-      charges: 4  # Fully charged
+    settings:
+      respawn-anchor:
+        charges: 4  # Fully charged
