--- a/src/main/resources/items/example_eternal_campfire.yml
+++ b/src/main/resources/items/example_eternal_campfire.yml
@@ -16,6 +16,7 @@ lore:
 custom-model-data: 3004
 metadata:
   block-data:
-    campfire:
-      lit: true           # Toujours allumé
-      signal-fire: false  # Pas de fumée
+    settings:
+      campfire:
+        lit: true           # Toujours allumé
+        signal-fire: false  # Pas de fumée
