--- a/src/main/resources/effects/example_enchants.yml
+++ b/src/main/resources/effects/example_enchants.yml
@@ -2,6 +2,7 @@
 # Apply custom enchantments to items
 id: "super_enchanted_sword"
 type: "ENCHANTS_APPLICATOR"
+display-name: "<gradient:#00BFFF:#1E90FF><bold>✨ SUPER ENCHANTS</bold></gradient>"
 enchantments:
   - enchantment: SHARPNESS
     evolution: INCREASE  # INCREASE or DECREASE
