--- a/src/main/resources/effects/example_empty.yml
+++ b/src/main/resources/effects/example_empty.yml
@@ -2,4 +2,5 @@
 # A placeholder effect with no functionality (useful for testing)
 id: "empty_effect"
 type: "EMPTY"
+display-name: "<gradient:#808080:#A9A9A9><bold>⚫ EMPTY</bold></gradient>"
 # No settings required - this effect does nothing
