--- a/src/main/resources/effects/example_infinite_bucket.yml
+++ b/src/main/resources/effects/example_infinite_bucket.yml
@@ -2,4 +2,5 @@
 # Makes water and lava buckets infinite (never empty)
 id: "infinite_bucket"
 type: "INFINITE_BUCKET"
+display-name: "<gradient:#00CED1:#1E90FF><bold>🪣 INFINITE BUCKET</bold></gradient>"
 # No additional settings required - automatically refills buckets
