feat: rework placeholder usage

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,12 @@ softdepend:
   - ShopGUIPlus
   - ZShop
   - WorldGuard
+  - PlaceholderAPI
+  - Jobs
+  - zJobs
+  - ItemsAdder
+  - Nexo
+  - Oraxen
 depend:
   - zMenu
 libraries:
