--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -38,6 +38,14 @@ item-received: "<green>You received <yellow><amount>x <item></yellow>."
 item-give-invalid-amount: "<red>Invalid amount! Amount must be greater than 0."
 
 # ========================================
+# Effect Give Command Messages
+# ========================================
+effect-given: "<green>Given <yellow><amount>x <effect></yellow> to <aqua><player></aqua>."
+effect-give-invalid-amount: "<red>Invalid amount! Amount must be greater than 0."
+effect-received: "<green>You received <yellow><amount>x <effect></yellow>."
+effect-no-representation: "<red>Effect <yellow><effect></yellow> has no representation and cannot be given as an item."
+
+# ========================================
 # Effects Display in Item Lore
 # ========================================
 # These messages control how effects are displayed in item lore
@@ -46,3 +54,19 @@ effects-lore-header: ""  # Empty line before effects section
 effects-lore-title: "<gray>Effects"  # Section title
 effects-lore-line: "<dark_gray>- <effect>"  # Each effect line
 effects-lore-more: "<dark_gray>- <white>And More..."  # When limit exceeded
+
+# ========================================
+# View Effects Command Messages
+# ========================================
+# Messages for the /zitems effect view command to display effects
+# Placeholders: <count>, <display-name>, <type>, <priority>
+view-no-item: "<red>You must be holding an item!"
+view-no-effects: "<yellow>This item has no effects."
+view-header: "<gray>======== <aqua>Item Effects (<count>) <gray>========"
+view-effect-line: "<dark_gray>• <display-name> <dark_gray>(<type>) <gray>- Priority: <priority>"
+view-footer: "<gray>==============================="
+
+# ========================================
+# GUI Messages
+# ========================================
+failed-to-open-gui: "<red>Failed to open the GUI. Please try again later."
