feat: add strip logs custom

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,3 +6,10 @@ debug: true
 # 0 = hide all effects
 # >0 = show only this number of effects (remaining shown as "...")
 default-nb-effects-view: -1
+
+strip-logs:
+  tags:
+    - "AXES"
+  strips:
+    - from: DIRT
+      to: DIAMOND_BLOCK
